--- a/app/src/main/res/layout/dialog_info_get.xml
+++ b/app/src/main/res/layout/dialog_info_get.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
+                android:layout_height="match_parent"
+                android:background="@color/transparent"
+    >
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        >
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -39,7 +46,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
             android:background="@color/red"
-            android:text="确定发布"
+            android:text="确定"
             android:textColor="@color/white"
             android:textSize="@dimen/TittleTextSize"/>
 
@@ -56,4 +63,5 @@
         android:layout_height="155dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/icon_sos"/>
+    </RelativeLayout>
 </RelativeLayout>
