--- a/app/src/main/res/drawable/anse_corner.xml
+++ b/app/src/main/res/drawable/anse_corner.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/infosColor" />
+            <solid android:color="#55b0b4fd" />
             <corners android:topLeftRadius="5dp" android:topRightRadius="5dp"
                 android:bottomLeftRadius="5dp" android:bottomRightRadius="5dp" />
         </shape>
