--- a/app/src/main/res/drawable/marker_member.xml
+++ b/app/src/main/res/drawable/marker_member.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:viewportWidth="1024"
-        android:viewportHeight="1024"
-        android:width="16dp"
-        android:height="16dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:viewportWidth="1024"
+    android:viewportHeight="1024" android:width="16dp" android:height="16dp">
     <path android:fillColor="#7076FA"
-          android:pathData="M512 512m-455.111111 0a24 24 0 1 0 910.222222 0 24 24 0 1 0-910.222222 0Z"/>
+        android:pathData="M512 512m-455.111111 0a24 24 0 1 0 910.222222 0 24 24 0 1 0-910.222222 0Z" />
 </vector>
