--- a/app/src/main/res/layout/activity_new_car_group.xml
+++ b/app/src/main/res/layout/activity_new_car_group.xml
@@ -480,8 +480,11 @@
                 android:id="@+id/SrelativeLayout14"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
                 android:layout_marginTop="18dp"
-                android:background="@drawable/select_btn"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/rec_bg_blue_unpress"
                 android:clickable="true"
                 android:gravity="center_vertical">
 
@@ -492,7 +495,7 @@
                     android:padding="12dp"
                     android:text="确定创立"
                     android:layout_centerHorizontal="true"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/TittleTextSize"/>
             </RelativeLayout>
         </LinearLayout>
