--- a/app/src/main/res/layout/dialog_info.xml
+++ b/app/src/main/res/layout/dialog_info.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/transparent"
+    >
 
     <RelativeLayout
         android:layout_width="300dp"
@@ -21,6 +23,7 @@
             android:textSize="23sp"/>
 
         <EditText
+            android:drawableLeft="@drawable/mikefeng_solid"
             android:id="@+id/top_edittext"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
