--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
+    xmlns:voiceView="http://schemas.android.com/apk/res-auto"
                  xmlns:app = "http://schemas.android.com/apk/res-auto"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
@@ -143,14 +144,14 @@
     </RelativeLayout>
     <LinearLayout
         android:id="@+id/whospeaking"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_below="@+id/rl_layout"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:visibility="gone"
+        android:visibility="visible"
         >
         <LinearLayout
             android:layout_width="wrap_content"
@@ -177,6 +178,20 @@
             android:layout_height="wrap_content"
             android:textStyle="italic"
             android:text="xxx正在说话..."
+            />
+        <com.carlos.voiceline.mylibrary.VoiceLineView
+            android:id="@+id/boxing"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginBottom="30dp"
+            voiceView:middleLineHeight="1dp"
+            voiceView:rectSpace="2dp"
+            voiceView:rectWidth="5dp"
+            voiceView:viewMode="line"
+            voiceView:voiceLine="@color/infosColor"
             />
     </LinearLayout>
     <ListView
@@ -223,6 +238,7 @@
             android:layout_weight="1"
             android:gravity="center"
             />
+
         <LinearLayout
             android:layout_width="60dp"
             android:layout_height="match_parent"
@@ -237,7 +253,9 @@
                 android:layout_height="match_parent"
                 />
         </LinearLayout>
+
     </LinearLayout>
+
     <com.lilei.springactionmenu.ActionMenu
         android:id="@+id/expanded_menu"
         android:layout_width="wrap_content"
@@ -273,4 +291,5 @@
 
     </com.wangjie.rapidfloatingactionbutton.RapidFloatingActionButton>
     </com.wangjie.rapidfloatingactionbutton.RapidFloatingActionLayout>
+
 </RelativeLayout>
