--- a/app/src/main/res/layout/page_03.xml
+++ b/app/src/main/res/layout/page_03.xml
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_alignParentStart="true"
-        android:background="@mipmap/chengdu1">
+        android:background="@mipmap/jingdian13">
 
         <TextView
             android:id="@+id/tittle_name"
@@ -101,5 +101,6 @@
         android:tint="@android:color/white"
         android:id="@+id/fab"
         android:elevation="1dp"
+        android:onClick="publishRouteBook"
         />
 </RelativeLayout>
