--- a/app/src/main/res/layout/person_dispatch.xml
+++ b/app/src/main/res/layout/person_dispatch.xml
@@ -97,17 +97,24 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/rl_layout"
         >
-
+        <ImageView
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="35dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/white_corner"
+            />
         <com.example.tr.tourhear.view.CircleImageView
             android:id="@+id/ImageMe"
-            android:layout_width="88dp"
-            android:layout_height="88dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:src="@mipmap/headportrait_2"/>
 
         <TextView
+            android:layout_marginTop="5dp"
             android:id="@+id/TextMe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
